--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=WOM ? Sheets Bridge
+author=Chris
+description=Triggers a Google Sheets Apps Script when the 'Sync WOM Group' button is pressed.
+tags=wom,wise old man,google sheets,apps script
+plugins=com.womsheetsbridge.WomSheetsBridgePlugin
