Added myself as author

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=WOM ? Sheets Bridge
-author=Chris
+author=kulcris
 description=Triggers a Google Sheets Apps Script when the 'Sync WOM Group' button is pressed.
 tags=wom,wise old man,google sheets,apps script
 plugins=com.womsheetsbridge.WomSheetsBridgePlugin
