--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 def runeLiteVersion = 'latest.release'
-def pluginMainClass = 'com.womsheetsbridge.WomSheetsBridgePlugin'
+def pluginMainClass = 'com.womsheetsbridge.womsheetsbridgeplugin'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
