--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=WOM ? Sheets Bridge
 author=kulcris
 description=Triggers a Google Sheets Apps Script when the 'Sync WOM Group' button is pressed.
 tags=wom,wise old man,google sheets,apps script
-plugins=com.womsheetsbridge.WomSheetsBridgePlugin
+plugins=com.womsheetsbridge.womsheetsbridgeplugin
